--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
                         '01강 수업 소개',
                         '02강 실습준비',
                         '03_1강 객체 기본',
-                        '03_2강 객체와 반복문'
+                        '03_2강 객체와 반복문',
+                        '04_1강 객체는 언제 쓰나요',
+                        '04_2강 객체 만들어보기',
+                        '05강 this',
+                        '06강 constructor의 필요성',
                     ];
                     var i = 0;
                     while ( i < courseTitle.length ) {
