--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                         '04_1강 객체는 언제 쓰나요',
                         '04_2강 객체 만들어보기',
                         '05강 this',
-                        '06강 constructor의 필요성',
+                        '06_1강 constructor의 필요성',
+                        '06_2강 constructor의 사례',
+                        '06_3강 constructor 만들기',
                     ];
                     var i = 0;
                     while ( i < courseTitle.length ) {
