--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         '06_1강 constructor의 필요성',
                         '06_2강 constructor의 사례',
                         '06_3강 constructor 만들기',
+                        '07_1강 prototype이 필요한 이유',
                     ];
                     var i = 0;
                     while ( i < courseTitle.length ) {
