--- a/06_2강 constructor의 사례/index.html
+++ b/06_2강 constructor의 사례/index.html
@@ -12,7 +12,7 @@
             <h1> 06_2강 constructor의 사례 </h1>
         </div>
         <div class="box">
-            <h3 class="stitle"> 공장 만들기의 예시 new Date </h3>
+            <h3 class="stitle"> 공장 만들기의 예시 - new Date </h3>
             <pre>
 Date라는 걸 통해서 객체를 구축해보겠음
             </pre>
