--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
                         '06_1강 constructor의 필요성',
                         '06_2강 constructor의 사례',
                         '06_3강 constructor 만들기',
-                        '07_1강 prototype이 필요한 이유',
+                        '07강 prototype',
+                        '08_1강 Classes',
+                        '08_2강 Classes 의 생성',
+                        '09강 class의 constructor function',
+                        '10강 메소드 구현',
                     ];
                     var i = 0;
                     while ( i < courseTitle.length ) {
